# Wordle_Calculator

./: .gitignore  CMakeLists.txt  Info.plist  README.md  WordleWindow.cpp  WordleWindow.h  main.cpp  wordle_analyzer
.github/workflows/: build.yml
Wordle_Calculator.app/Contents/: Info.plist
Wordle_Calculator.app/Contents/Frameworks/QtDBus.framework/Versions/A/: QtDBus
Wordle_Calculator.app/Contents/Frameworks/QtSvg.framework/Versions/A/: QtSvg
Wordle_Calculator.app/Contents/MacOS/: AcceptedWordList  Wordle_Calculator
Wordle_Calculator.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
Wordle_Calculator.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib
Wordle_Calculator.app/Contents/PlugIns/styles/: libqmacstyle.dylib
